# ptu-ri-alert

./: README.md  pyproject.toml
event-grid/: setup-event-grid.sh
function-app/: .funcignore  function_app.py  local.settings.json  requirements.txt
